--- a/TestGithubAPI/GithubAPI/Views/Shared/_Layout.cshtml
+++ b/TestGithubAPI/GithubAPI/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - GithubAPI</title>
-
+    <link rel="shortcut icon" type="image/ico" href="~/images/icons8-github-96.png" />
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
