--- a/TestGithubAPI/GithubAPI/Views/Home/Index.cshtml
+++ b/TestGithubAPI/GithubAPI/Views/Home/Index.cshtml
@@ -70,9 +70,11 @@
             headers: {
                 Accept: "application/vnd.github.symmetra-preview+json",
                 "Content-Type": "application/json",
-                "Authorization": "token 78c750794f088a3288b0dee425c7fd5aaec7fa92"
+                "Authorization": "token 197a8ff2f838020465566da4792f8b008add826b",
+                
             },
             url: "https://api.github.com/users/" + user + "/repos",
+            
             method: 'GET',
             credentials: 'same-origin',
             success: function (res) {
@@ -157,7 +159,7 @@
             headers: {
                 Accept: "application/vnd.github.symmetra-preview+json",
                 "Content-Type": "text/plain; charset=utf-8",
-                "Authorization": "token 78c750794f088a3288b0dee425c7fd5aaec7fa92"
+                "Authorization": "token 197a8ff2f838020465566da4792f8b008add826b"
             },
             url: "https://api.github.com/repos/" + user + "/" + repo + "/languages",
             method: 'GET',
